--- a/util/Makefile
+++ b/util/Makefile
@@ -1,6 +1,6 @@
 all:
-	../scripts/decode16.pl > decode16.v
-	../scripts/select16.pl > select16.v
+	./decode16.pl > decode16.v
+	./select16.pl > select16.v
 
 clean:
 	rm -f decode16.v select16.v
